--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
     "compression": "^1.8.0",
